--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 <body>
 
   <div id="root"></div>
-
+  <script src="./dist/bundle.js"></script>
   <!-- Notice we are pointing to `bundle.js` file -->
   <!-- <script src="bundle.js"></script> -->
   
