index share this

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     }
   </style>
 
-<!-- <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6690cf0a7817b30019b78a1c&product=sop' async='async'></script> -->
+  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=6690cf0a595beb00197df933&product=sop' async='async'></script>
 </head>
 
 <body>
