--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy" content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
   
-  <title>Ask Associates Coimbatore & Palladam | askassociatescbe.com</title>
-  <meta name="title" content="Ask Associates Coimbatore & Palladam | askassociatescbe.com" data-react-helmet="true" />
-  <meta name="description" content="Ask Associates Coimbatore and Palladam Construction Material Supplier such as Fly Ash Bricks, AAC Blocks, River Sand, Sand, Crushed Stones, Cements, Redymix Concretes and All Brand Cements. Manufacturer | Wholesaler | Trader | Retailer | Distributor"  data-react-helmet="true" />
-  <meta name="keywords" content="ask associates Coimbatore, ask associates palladam, ask associates cbe, askassociatescbe.com, construction material supplier coimbatore, construction material supplier palladam, redymix coimbatore, readymix palladam, sand in coimbatore, sand in palladam, cements in coimbatore, cements in palladam, Manufacturer, Wholesaler, Trader, Retailer, Distributor, jally stones, strong construction , strong building, crushed stones in coimbatore ,palladam, all brand cements supplier in coimbatore, all brand cement supplier in palladam"  data-react-helmet="true" />
-  <link rel="author" href="Ask Associates"  data-react-helmet="true"/>
+  <title>ASK Associates Coimbatore & Palladam | askassociatescbe.com</title>
+  <meta name="title" content="ASK Associates Coimbatore & Palladam | askassociatescbe.com" data-react-helmet="true" />
+  <meta name="description" content="ASK Associates Coimbatore and Palladam Construction Material Supplier such as Fly Ash Bricks, AAC Blocks, River Sand, Sand, Crushed Stones, Cements, Redymix Concretes and All Brand Cements. Manufacturer | Wholesaler | Trader | Retailer | Distributor"  data-react-helmet="true" />
+  <meta name="keywords" content="ASK Associates Coimbatore, ask associates Coimbatore, ask associates palladam, ask associates cbe, askassociatescbe.com, construction material supplier coimbatore, construction material supplier palladam, redymix coimbatore, readymix palladam, sand in coimbatore, sand in palladam, cements in coimbatore, cements in palladam, Manufacturer, Wholesaler, Trader, Retailer, Distributor, jally stones, strong construction , strong building, crushed stones in coimbatore ,palladam, all brand cements supplier in coimbatore, all brand cement supplier in palladam"  data-react-helmet="true" />
+  <link rel="author" href="ASK Associates"  data-react-helmet="true"/>
   <link rel="canonical" href="https://askassociatescbe.com/"  data-react-helmet="true"/>
 
   <meta property="og:url" content="https://askassociatescbe.com/"  data-react-helmet="true"/>
   <meta property="og:image" content="assets/img/askassociates_logo.png"  data-react-helmet="true" />
-  <meta property="og:description" content="Ask Associates Coimbatore and Palladam Construction Material Supplier such as Fly Ash Bricks, AAC Blocks, River Sand, Sand, Crushed Stones, Cements, Redymix Concretes and All Brand Cements. Manufacturer | Wholesaler | Trader | Retailer | Distributor"    data-react-helmet="true" />
-  <meta property="og:title" content="Ask Associates Coimbatore & Palladam | askassociatescbe.com"  data-react-helmet="true" />
-  <meta property="og:site_name" content="Ask Associates Coimbatore & Palladam | askassociatescbe.com"  data-react-helmet="true" />
+  <meta property="og:description" content="ASK Associates Coimbatore and Palladam Construction Material Supplier such as Fly Ash Bricks, AAC Blocks, River Sand, Sand, Crushed Stones, Cements, Redymix Concretes and All Brand Cements. Manufacturer | Wholesaler | Trader | Retailer | Distributor"    data-react-helmet="true" />
+  <meta property="og:title" content="ASK Associates Coimbatore & Palladam | askassociatescbe.com"  data-react-helmet="true" />
+  <meta property="og:site_name" content="ASK Associates Coimbatore & Palladam | askassociatescbe.com"  data-react-helmet="true" />
   <meta property="og:see_also" content="https://askassociatescbe.com/"  data-react-helmet="true" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:type" content="website" />
@@ -27,8 +27,8 @@
 
   <meta name="twitter:card" content="summary"  data-react-helmet="true" />
   <meta name="twitter:url" content="https://askassociatescbe.com/"  data-react-helmet="true" />
-  <meta name="twitter:title" content="Ask Associates Coimbatore & Palladam | askassociatescbe.com"  data-react-helmet="true" />
-  <meta name="twitter:description" content="Ask Associates Coimbatore and Palladam Construction Material Supplier such as Fly Ash Bricks, AAC Blocks, River Sand, Sand, Crushed Stones, Cements, Redymix Concretes and All Brand Cements. Manufacturer | Wholesaler | Trader | Retailer | Distributor"  data-react-helmet="true" />
+  <meta name="twitter:title" content="ASK Associates Coimbatore & Palladam | askassociatescbe.com"  data-react-helmet="true" />
+  <meta name="twitter:description" content="ASK Associates Coimbatore and Palladam Construction Material Supplier such as Fly Ash Bricks, AAC Blocks, River Sand, Sand, Crushed Stones, Cements, Redymix Concretes and All Brand Cements. Manufacturer | Wholesaler | Trader | Retailer | Distributor"  data-react-helmet="true" />
   <meta name="twitter:image" content="assets/img/askassociates_logo.png"  data-react-helmet="true" />
 
 
